View Issue Details

IDProjectCategoryView StatusLast Update
0026012Open CASCADEOCCT:Visualizationpublic2015-05-14 16:34
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
PlatformAndroid 
Target Version6.9.0Fixed in Version6.9.0 
Summary0026012: Visualization, TKOpenGl - fix misprints in detection of high precision floats within OpenGL ES 2.0
DescriptionDue to two misprints in the code highp does not detected properly.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

child of 0025282 closedbugmaster Visualization, OpenGl_PrimitiveArray - provide built-in GLSL programs as alternative to FFP 

Activities

git

2015-04-02 19:07

administrator   ~0039174

Branch CR26012 has been created by kgv.

SHA-1: d1a4f86f80c59baeac053c185e8843267006e112


Detailed log of new commits:

Author: kgv
Date: Thu Apr 2 19:06:57 2015 +0300

    0026012: Visualization, TKOpenGl - fix misprints in detection of high precision floats within OpenGL ES 2.0

kgv

2015-04-02 19:07

developer   ~0039175

Please check compilation of the patch on Android, regression testing is not needed.

mkv

2015-04-07 16:24

tester   ~0039317

Dear kgv,
could you please rebase CR26012 on current master, there are conflict files.

git

2015-04-07 16:32

administrator   ~0039319

Branch CR26012_1 has been created by kgv.

SHA-1: 9a403c46282c114d221e78dcc185b40a09431549


Detailed log of new commits:

Author: kgv
Date: Thu Apr 2 19:06:57 2015 +0300

    0026012: Visualization, TKOpenGl - fix misprints in detection of high precision floats within OpenGL ES 2.0

kgv

2015-04-07 16:33

developer   ~0039320

Please use rebased patch from branch CR26012_1, there were no conflicts.

mkv

2015-04-08 14:16

tester   ~0039364

Dear BugMaster,
Branch CR26012_1from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: 9a403c46282c114d221e78dcc185b40a09431549

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 4 (4 on master)
Windows: 0 (0 on master)

git

2015-05-14 16:34

administrator   ~0041059

Branch CR26012 has been deleted by inv.

SHA-1: d1a4f86f80c59baeac053c185e8843267006e112

git

2015-05-14 16:34

administrator   ~0041060

Branch CR26012_1 has been deleted by inv.

SHA-1: 9a403c46282c114d221e78dcc185b40a09431549

Related Changesets

occt: master 447c4115

2015-04-02 16:06:57

kgv


Committer: bugmaster Details Diff
0026012: Visualization, TKOpenGl - fix misprints in detection of high precision floats within OpenGL ES 2.0 Affected Issues
0026012
mod - src/OpenGl/OpenGl_Context.cxx Diff File

Issue History

Date Modified Username Field Change
2015-04-02 19:03 kgv New Issue
2015-04-02 19:03 kgv Assigned To => kgv
2015-04-02 19:04 kgv Relationship added child of 0025282
2015-04-02 19:07 git Note Added: 0039174
2015-04-02 19:07 kgv Note Added: 0039175
2015-04-02 19:07 kgv Assigned To kgv => bugmaster
2015-04-02 19:07 kgv Status new => resolved
2015-04-02 19:07 kgv Status resolved => reviewed
2015-04-03 14:47 mkv Assigned To bugmaster => mkv
2015-04-07 16:24 mkv Note Added: 0039317
2015-04-07 16:24 mkv Assigned To mkv => kgv
2015-04-07 16:24 mkv Status reviewed => feedback
2015-04-07 16:32 git Note Added: 0039319
2015-04-07 16:33 kgv Note Added: 0039320
2015-04-07 16:33 kgv Assigned To kgv => bugmaster
2015-04-07 16:33 kgv Status feedback => reviewed
2015-04-07 19:10 mkv Assigned To bugmaster => mkv
2015-04-08 14:16 mkv Note Added: 0039364
2015-04-08 14:16 mkv Assigned To mkv => bugmaster
2015-04-08 14:16 mkv Status reviewed => tested
2015-04-08 14:16 mkv Test case number => Not needed
2015-04-10 14:09 bugmaster Changeset attached => occt master 447c4115
2015-04-10 14:09 bugmaster Status tested => verified
2015-04-10 14:09 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-05-14 16:34 git Note Added: 0041059
2015-05-14 16:34 git Note Added: 0041060