0026012: Visualization, TKOpenGl - fix misprints in detection of high precision floats within OpenGL ES 2.0